# CodeObservatory

./: .gitignore  .impeccable.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts
.next/: trace  trace-build
.next/cache/: .previewinfo  .rscinfo  .tsbuildinfo
.next/types/: routes.d.ts  validator.ts
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  state.rs
src-tauri/src/commands/: changes.rs  graph.rs  mod.rs  project.rs  watcher.rs
src/components/graph/: BloomOverlay.tsx  CosmicGalaxy.tsx  CosmicProjectGalaxy.tsx  GalaxyEdges.tsx  GalaxyGraph.tsx  GalaxyScene.tsx  GraphPanel.tsx  Inspector.tsx  KnowledgeGraph.tsx  MilkyWay.tsx  NebulaRings.tsx  ProjectGalaxy.tsx  SettingsPanel.tsx
src/components/layout/: AppLayout.tsx  AppShell.tsx  Sidebar.tsx  TopBar.tsx
src/components/project/: ProjectSelector.tsx
src/components/ui/: avatar.tsx  badge.tsx  base.tsx  button.tsx  card.tsx  scroll-area.tsx  separator.tsx  tabs.tsx  tooltip.tsx
src/hooks/: useObservatory.ts  useTheme.ts  useTheme.tsx
src/i18n/: config.ts  en.json  zh.json
src/lib/: api.ts  forceSimulation.ts  galaxyColors.ts  galaxyLayout.ts  solarLayout.ts  types.ts  utils.ts
src/pages/: Dashboard.tsx  Graph.tsx  GraphPage.tsx  Timeline.tsx
src/styles/: co-theme.css  theme.css
src/types/: d3-force-3d.d.ts
